Correct issue with merge, and ensure log panels are scrolled to bottom on data.

--- a/Assets/UI/Style.uss
+++ b/Assets/UI/Style.uss
@@ -79,3 +79,10 @@
     width: 20%;
     background-color: rgba(76, 197, 87, 0.28);
 }
+
+.ScrollPanel {
+    flex-grow: 0;
+    width: 100%;
+    justify-content: flex-start;
+    height: 100%;
+}
